fix: add readme and fix notebook

--- a/examples/03_classify_video_zero_shot.ipynb
+++ b/examples/03_classify_video_zero_shot.ipynb
@@ -49,11 +49,11 @@
     "    # This is done to avoid any conflicts with the preinstalled libraries.\n",
     "    !pip install uv\n",
     "    !mkdir -p /content/feluda_custom_venv\n",
-    "    !uv pip install --target=/content/feluda_custom_venv --prerelease allow feluda feluda-vid-vec-rep-clip feluda-cluster-embeddings opencv-python matplotlib > /dev/null 2>&1\n",
+    "    !uv pip install --target=/content/feluda_custom_venv --prerelease allow feluda feluda-classify-video-zero-shot opencv-python matplotlib > /dev/null 2>&1\n",
     "\n",
     "    sys.path.insert(0, \"/content/feluda_custom_venv\")\n",
     "else:\n",
-    "    !uv pip install feluda feluda-vid-vec-rep-clip feluda-cluster-embeddings opencv-python matplotlib > /dev/null 2>&1"
+    "    !uv pip install feluda feluda-classify-video-zero-shot opencv-python matplotlib > /dev/null 2>&1"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "from huggingface_hub import hf_hub_download\n",
     "\n",
     "from feluda import Feluda\n",
-    "from feluda.models.media_factory import VideoFactory"
+    "from feluda.models.media_factory import VideoFactory\n"
    ]
   },
   {
