chore: add basic documentation

--- a/examples/03_classify_video_zero_shot.ipynb
+++ b/examples/03_classify_video_zero_shot.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3725096f",
+   "metadata": {},
+   "source": [
+    "# Zero-Shot Video Classification with Feluda\n",
+    "\n",
+    "This notebook demonstrates how to use the [`feluda`](https://github.com/tattle-made/feluda) package to extract video frames and classify the video using the [`zero-shot classification operator`](https://pypi.org/project/feluda-classify-video-zero-shot/) operator. It includes - \n",
+    "- Setting up Feluda and its operators from an YAML config file.\n",
+    "- Using video data from a subset of the [UCF101 video dataset](https://huggingface.co/datasets/sayakpaul/ucf101-subset) dataset. We are using this for demo, but can be replaced with any video dataset.\n",
+    "- Using Feluda's [`zero-shot classification operator`](https://pypi.org/project/feluda-classify-video-zero-shot/) to cluster vidoes.\n",
+    "- Visualizing the clusters with video thumbnails and the classified labels."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c40b5fac-0ced-4d7a-967f-d10e457d9fae",
@@ -257,7 +271,7 @@
    "id": "f6474ba5-fde0-4f6a-bb40-131f20eb3616",
    "metadata": {},
    "source": [
-    "classify_video_zero_shot operator output example that classifies video as BenchPress"
+    "`classify_video_zero_shot` operator output example that classifies video as `BenchPress`"
    ]
   },
   {
@@ -289,6 +303,16 @@
    ],
    "source": [
     "operator_parameter[0][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82ece75b",
+   "metadata": {},
+   "source": [
+    "### Clustering videos\n",
+    "\n",
+    "This cell groups the videos by its predicted class"
    ]
   },
   {
@@ -472,7 +496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cleaning cell\n",
+    "# Clean up resources when you're done\n",
     "import shutil\n",
     "\n",
     "shutil.rmtree(\"thumbnails\")\n",
