chore: formatting files

--- a/examples/03_classify_video_zero_shot.ipynb
+++ b/examples/03_classify_video_zero_shot.ipynb
@@ -84,7 +84,7 @@
     "from huggingface_hub import hf_hub_download\n",
     "\n",
     "from feluda import Feluda\n",
-    "from feluda.models.media_factory import VideoFactory\n"
+    "from feluda.models.media_factory import VideoFactory"
    ]
   },
   {
@@ -126,11 +126,13 @@
     "dataset_name = \"UCF101_subset/train\"\n",
     "hf_dataset_identifier = \"sayakpaul/ucf101-subset\"\n",
     "filename = \"UCF101_subset.tar.gz\"\n",
-    "file_path = hf_hub_download(repo_id=hf_dataset_identifier, filename=filename, repo_type=\"dataset\")\n",
+    "file_path = hf_hub_download(\n",
+    "    repo_id=hf_dataset_identifier, filename=filename, repo_type=\"dataset\"\n",
+    ")\n",
     "\n",
     "\n",
     "with tarfile.open(file_path) as t:\n",
-    "\tt.extractall(\".\")\n"
+    "    t.extractall(\".\")"
    ]
   },
   {
@@ -158,17 +160,17 @@
     "def create_feluda_config():\n",
     "    \"\"\"Create and return a configuration dictionary for Feluda\"\"\"\n",
     "    config = {\n",
-    "\t\t\"operators\": {\n",
-    "\t\t\t\"label\": \"Operators\",\n",
-    "\t\t\t\"parameters\": [\n",
-    "\t\t\t\t{\n",
-    "        \t\t\t\"name\": \"Classify Video\",\n",
-    "      \t\t\t\t\"type\": \"classify_video_zero_shot\",\n",
-    "      \t\t\t\t\"parameters\": {\"index_name\": \"video\"},\n",
-    "          \t\t},\n",
-    "    \t\t]\n",
-    "\t\t}\n",
-    "\t}\n",
+    "        \"operators\": {\n",
+    "            \"label\": \"Operators\",\n",
+    "            \"parameters\": [\n",
+    "                {\n",
+    "                    \"name\": \"Classify Video\",\n",
+    "                    \"type\": \"classify_video_zero_shot\",\n",
+    "                    \"parameters\": {\"index_name\": \"video\"},\n",
+    "                },\n",
+    "            ],\n",
+    "        }\n",
+    "    }\n",
     "    # Create a temporary file to store the configuration\n",
     "    fd, config_path = tempfile.mkstemp(suffix=\".yml\")\n",
     "    with open(fd, \"w\") as f:\n",
@@ -215,7 +217,9 @@
     "    cap = cv2.VideoCapture(video_path)\n",
     "    ret, frame = cap.read()  # Read the first frame\n",
     "    if ret:\n",
-    "        thumbnail_path = os.path.join(save_path, os.path.basename(video_path).replace(\".avi\", \"_thumbnail.jpg\"))\n",
+    "        thumbnail_path = os.path.join(\n",
+    "            save_path, os.path.basename(video_path).replace(\".avi\", \"_thumbnail.jpg\")\n",
+    "        )\n",
     "        cv2.imwrite(thumbnail_path, frame)  # Save the thumbnail as a JPEG\n",
     "        cap.release()\n",
     "        return thumbnail_path  # Return the path to the saved thumbnail\n",
@@ -261,9 +265,14 @@
     "            os.path.join(dataset_name, class_dir, temp_list[i])\n",
     "        )\n",
     "\n",
-    "        operator_parameter.append([classify_video_operator.run(video_path, labels), os.path.join(dataset_name, class_dir, temp_list[i])])\n",
+    "        operator_parameter.append(\n",
+    "            [\n",
+    "                classify_video_operator.run(video_path, labels),\n",
+    "                os.path.join(dataset_name, class_dir, temp_list[i]),\n",
+    "            ]\n",
+    "        )\n",
     "\n",
-    "        i += 1\n"
+    "        i += 1"
    ]
   },
   {
@@ -329,11 +338,10 @@
     "clusters = {key: [] for key in sorted(labels)}\n",
     "\n",
     "for results in operator_parameter:\n",
-    "\n",
     "    class_predicted = results[0][\"prediction\"]\n",
     "    payload_path = results[1]\n",
     "\n",
-    "    clusters[class_predicted].append(payload_path)\n"
+    "    clusters[class_predicted].append(payload_path)"
    ]
   },
   {
@@ -479,14 +487,16 @@
     "    for i, video_path in enumerate(video_paths):\n",
     "        video_thumbnail = load_thumbnail(video_path)\n",
     "        if video_thumbnail is not None:\n",
-    "            video_thumbnail = cv2.cvtColor(cv2.resize(video_thumbnail, (60, 60)), cv2.COLOR_BGR2RGB)\n",
+    "            video_thumbnail = cv2.cvtColor(\n",
+    "                cv2.resize(video_thumbnail, (60, 60)), cv2.COLOR_BGR2RGB\n",
+    "            )\n",
     "            axes[i].imshow(video_thumbnail)\n",
     "            axes[i].axis(\"off\")\n",
     "\n",
     "    plt.suptitle(f\"{cluster_label}\", fontsize=16)\n",
     "    plt.tight_layout()\n",
     "    plt.subplots_adjust(top=0.85)\n",
-    "    plt.show()\n"
+    "    plt.show()"
    ]
   },
   {
