fix: readme link

--- a/docs/examples/plot_tsne_videos.ipynb
+++ b/docs/examples/plot_tsne_videos.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "## Visualizing Video Embeddings with Feluda and t-SNE \n",
     "This notebook demonstrates how to use the [`feluda`](https://github.com/tattle-made/feluda) to extract video embeddings and visualize them using t-SNE, with thumbnails overlaid for each video. It includes:\n",
-    "- Setting up Feluda and its operators from an YAML config file.\n",
+    "- Setting up Feluda and its operators.\n",
     "- Using video data from a subset of the [UCF101 video dataset](https://huggingface.co/datasets/sayakpaul/ucf101-subset) dataset. We are using this for demo, but can be replaced with any video dataset.\n",
     "- Generating video embeddings using feluda CLIP [video operator](https://pypi.org/project/feluda-vid-vec-rep-clip/).\n",
     "- Reducing embedding dimensions using t-SNE\n",
