fix: operator class names

--- a/docs/examples/classify_video_zero_shot.ipynb
+++ b/docs/examples/classify_video_zero_shot.ipynb
@@ -157,9 +157,9 @@
     }
    ],
    "source": [
-    "from classify_video_zero_shot import VideoClassifier\n",
+    "from classify_video_zero_shot import ClassifyVideoZeroShot\n",
     "\n",
-    "classifier = VideoClassifier()"
+    "classifier = ClassifyVideoZeroShot()"
    ]
   },
   {
