--- a/docs/examples/compare_video_hashes.ipynb
+++ b/docs/examples/compare_video_hashes.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Compare Perceptual Similarity between two Videos with Feluda\n",
     "\n",
-    "This notebook demonstrates how to use the `VideoHashTMK` operator to generate\n",
+    "This notebook demonstrates how to use the `VideoHash` operator to generate\n",
     "perceptual hashes for two videos and compare their similarity. It processes\n",
     "two sample videos and shows their hash values for similarity analysis."
    ]
@@ -83,11 +83,11 @@
     }
    ],
    "source": [
-    "from video_hash_tmk import VideoHashTmk\n",
+    "from video_hash import VideoHash\n",
     "\n",
     "from feluda.factory import VideoFactory\n",
     "\n",
-    "hasher = VideoHashTmk()"
+    "hasher = VideoHash()"
    ]
   },
   {
