--- a/docs/examples/detect_lewd_images.ipynb
+++ b/docs/examples/detect_lewd_images.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Detect Lewd Content in Images with Feluda\n",
     "\n",
-    "This notebook demonstrates how to use the `LewdImageDetector` operator to analyze\n",
+    "This notebook demonstrates how to use the `DetectLewdImages` operator to analyze\n",
     "images for inappropriate content. It processes a sample image and displays the\n",
     "probability score indicating likelihood of lewd content."
    ]
@@ -90,11 +90,11 @@
     }
    ],
    "source": [
-    "from detect_lewd_images import LewdImageDetector\n",
+    "from detect_lewd_images import DetectLewdImages\n",
     "\n",
     "from feluda.factory import ImageFactory\n",
     "\n",
-    "detector = LewdImageDetector()"
+    "detector = DetectLewdImages()"
    ]
   },
   {
