--- a/docs/examples/find_text_in_newspaper.ipynb
+++ b/docs/examples/find_text_in_newspaper.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Detect Text in Newspaper Images with Feluda\n",
     "\n",
-    "This example demonstrates how to use the `ImageTextDetector` operator to extract text\n",
+    "This example demonstrates how to use the `DetectTextInImage` operator to extract text\n",
     "from newspaper images. It processes multiple newspaper clippings and displays the\n",
     "detected text with proper formatting and analysis."
    ]
@@ -85,11 +85,11 @@
     }
    ],
    "source": [
-    "from detect_text_in_image_tesseract import ImageTextDetector\n",
+    "from detect_text_in_image import DetectTextInImage\n",
     "\n",
     "from feluda.factory import ImageFactory\n",
     "\n",
-    "detector = ImageTextDetector(psm=6, oem=1)"
+    "detector = DetectTextInImage(psm=6, oem=1)"
    ]
   },
   {
