fix: import naming

--- a/docs/examples/classify_video_zero_shot.ipynb
+++ b/docs/examples/classify_video_zero_shot.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "from classify_video_zero_shot import ClassifyVideoZeroShot\n",
+    "from feluda.operators import ClassifyVideoZeroShot\n",
     "\n",
     "classifier = ClassifyVideoZeroShot()"
    ]
