--- a/docs/examples/compare_video_hashes.ipynb
+++ b/docs/examples/compare_video_hashes.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2143fc54",
    "metadata": {},
    "outputs": [
@@ -82,9 +82,8 @@
     }
    ],
    "source": [
-    "from video_hash import VideoHash\n",
-    "\n",
     "from feluda.factory import VideoFactory\n",
+    "from feluda.operators import VideoHash\n",
     "\n",
     "hasher = VideoHash()"
    ]
