--- a/docs/examples/detect_lewd_images.ipynb
+++ b/docs/examples/detect_lewd_images.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2143fc54",
    "metadata": {},
    "outputs": [
@@ -89,9 +89,8 @@
     }
    ],
    "source": [
-    "from detect_lewd_images import DetectLewdImages\n",
-    "\n",
     "from feluda.factory import ImageFactory\n",
+    "from feluda.operators import DetectLewdImages\n",
     "\n",
     "detector = DetectLewdImages()"
    ]
