--- a/docs/examples/find_text_in_newspaper.ipynb
+++ b/docs/examples/find_text_in_newspaper.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "de8f9d53-86f4-4a5a-ae76-768fc002852a",
    "metadata": {},
    "outputs": [
@@ -84,9 +84,8 @@
     }
    ],
    "source": [
-    "from detect_text_in_image import DetectTextInImage\n",
-    "\n",
     "from feluda.factory import ImageFactory\n",
+    "from feluda.operators import DetectTextInImage\n",
     "\n",
     "detector = DetectTextInImage(psm=6, oem=1)"
    ]
