fix: operator class names and imports (#677)
* fix: operator class names

* fix: import params

* chore: apply linting

* fix: import naming

--- a/docs/examples/classify_video_zero_shot.ipynb
+++ b/docs/examples/classify_video_zero_shot.ipynb
@@ -157,9 +157,9 @@
     }
    ],
    "source": [
-    "from classify_video_zero_shot import VideoClassifier\n",
+    "from feluda.operators import ClassifyVideoZeroShot\n",
     "\n",
-    "classifier = VideoClassifier()"
+    "classifier = ClassifyVideoZeroShot()"
    ]
   },
   {
@@ -199,7 +199,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "\n",
     "operator_parameter = []\n",
     "labels = os.listdir(f\"{dataset_name}\")\n",
