--- a/docs/examples/find_text_in_newspaper.ipynb
+++ b/docs/examples/find_text_in_newspaper.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Detect Text in Newspaper Images with Feluda\n",
     "\n",
-    "This example demonstrates how to use the `ImageTextDetector` operator to extract text\n",
+    "This example demonstrates how to use the `DetectTextInImage` operator to extract text\n",
     "from newspaper images. It processes multiple newspaper clippings and displays the\n",
     "detected text with proper formatting and analysis."
    ]
@@ -41,7 +41,6 @@
    ],
    "source": [
     "%%time\n",
-    "import os\n",
     "import sys\n",
     "\n",
     "IN_COLAB = \"google.colab\" in sys.modules\n",
@@ -71,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "de8f9d53-86f4-4a5a-ae76-768fc002852a",
    "metadata": {},
    "outputs": [
@@ -85,11 +84,10 @@
     }
    ],
    "source": [
-    "from detect_text_in_image_tesseract import ImageTextDetector\n",
-    "\n",
     "from feluda.factory import ImageFactory\n",
+    "from feluda.operators import DetectTextInImage\n",
     "\n",
-    "detector = ImageTextDetector(psm=6, oem=1)"
+    "detector = DetectTextInImage(psm=6, oem=1)"
    ]
   },
   {
