--- a/docs/examples/compare_video_hashes.ipynb
+++ b/docs/examples/compare_video_hashes.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Compare Perceptual Similarity between two Videos with Feluda\n",
     "\n",
-    "This notebook demonstrates how to use the `VideoHashTMK` operator to generate\n",
+    "This notebook demonstrates how to use the `VideoHash` operator to generate\n",
     "perceptual hashes for two videos and compare their similarity. It processes\n",
     "two sample videos and shows their hash values for similarity analysis."
    ]
@@ -41,7 +41,6 @@
    ],
    "source": [
     "%%time\n",
-    "import os\n",
     "import sys\n",
     "\n",
     "IN_COLAB = \"google.colab\" in sys.modules\n",
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2143fc54",
    "metadata": {},
    "outputs": [
@@ -83,11 +82,10 @@
     }
    ],
    "source": [
-    "from video_hash_tmk import VideoHashTmk\n",
-    "\n",
     "from feluda.factory import VideoFactory\n",
+    "from feluda.operators import VideoHash\n",
     "\n",
-    "hasher = VideoHashTmk()"
+    "hasher = VideoHash()"
    ]
   },
   {
