--- a/docs/examples/detect_lewd_images.ipynb
+++ b/docs/examples/detect_lewd_images.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Detect Lewd Content in Images with Feluda\n",
     "\n",
-    "This notebook demonstrates how to use the `LewdImageDetector` operator to analyze\n",
+    "This notebook demonstrates how to use the `DetectLewdImages` operator to analyze\n",
     "images for inappropriate content. It processes a sample image and displays the\n",
     "probability score indicating likelihood of lewd content."
    ]
@@ -41,7 +41,6 @@
    ],
    "source": [
     "%%time\n",
-    "import os\n",
     "import sys\n",
     "\n",
     "IN_COLAB = \"google.colab\" in sys.modules\n",
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2143fc54",
    "metadata": {},
    "outputs": [
@@ -90,11 +89,10 @@
     }
    ],
    "source": [
-    "from detect_lewd_images import LewdImageDetector\n",
-    "\n",
     "from feluda.factory import ImageFactory\n",
+    "from feluda.operators import DetectLewdImages\n",
     "\n",
-    "detector = LewdImageDetector()"
+    "detector = DetectLewdImages()"
    ]
   },
   {
