--- a/docs/examples/plot_tsne_videos.ipynb
+++ b/docs/examples/plot_tsne_videos.ipynb
@@ -106,10 +106,9 @@
     }
    ],
    "source": [
-    "from dimension_reduction import DimensionReduction\n",
-    "from vid_vec_rep_clip import VidVecRepClip\n",
+    "from feluda.operators import DimensionReduction, VidVecRep\n",
     "\n",
-    "vid_vec_operator = VidVecRepClip()\n",
+    "vid_vec_operator = VidVecRep()\n",
     "dim_red_operator = DimensionReduction(model_type=\"tsne\")"
    ]
   },
