chore: update documentation

--- a/docs/examples/classify_video_zero_shot.ipynb
+++ b/docs/examples/classify_video_zero_shot.ipynb
@@ -16,10 +16,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7562061",
+   "metadata": {},
+   "source": [
+    "[![GitHub](https://img.shields.io/badge/GitHub-View%20Source-blue?logo=github)](https://github.com/tattle-made/feluda/blob/main/docs/examples/classify_video_zero_shot.ipynb)  [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tattle-made/feluda/blob/main/docs/examples/classify_video_zero_shot.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b63d79e1",
    "metadata": {},
    "source": [
-    "### Install Required Packages\n",
     "Install dependencies conditionally based on whether the notebook is running in Colab or locally."
    ]
   },
@@ -83,7 +90,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Dataset Structure Breakdown\n",
+    "Dataset Structure Breakdown\n",
     "\n",
     "- **UCF101_subset/**: The root directory containing the dataset.\n",
     "  - **train/**: Contains training samples.\n",
@@ -138,8 +145,7 @@
    "id": "35a99415-ca33-4395-8bf0-84b109bcd382",
    "metadata": {},
    "source": [
-    "### Initializing Feluda operator\n",
-    "We'll use one operator for this example."
+    "Initializing Feluda operator for this example"
    ]
   },
   {
@@ -277,7 +283,7 @@
    "id": "82ece75b",
    "metadata": {},
    "source": [
-    "### Clustering videos\n",
+    "Clustering videos  \n",
     "\n",
     "This cell groups the videos by its predicted class"
    ]
@@ -307,7 +313,7 @@
    "id": "4cf0fc79-8a4c-4088-aeda-9fe4f0d9059d",
    "metadata": {},
    "source": [
-    "### Visualizing Clusters"
+    "Visualizing Clusters"
    ]
   },
   {
