--- a/docs/examples/compare_video_hashes.ipynb
+++ b/docs/examples/compare_video_hashes.ipynb
@@ -14,10 +14,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c32d1dd4",
+   "metadata": {},
+   "source": [
+    "[![GitHub](https://img.shields.io/badge/GitHub-View%20Source-blue?logo=github)](https://github.com/tattle-made/feluda/blob/main/docs/examples/compare_video_hashes.ipynb) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tattle-made/feluda/blob/main/docs/examples/compare_video_hashes.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b63d79e1",
    "metadata": {},
    "source": [
-    "### Install Required Packages\n",
     "Install dependencies conditionally based on whether the notebook is running in Colab or locally."
    ]
   },
@@ -63,7 +70,6 @@
    "id": "35a99415-ca33-4395-8bf0-84b109bcd382",
    "metadata": {},
    "source": [
-    "### Initializing Feluda operator\n",
     "We'll use one operator for this example."
    ]
   },
