--- a/docs/examples/find_text_in_newspaper.ipynb
+++ b/docs/examples/find_text_in_newspaper.ipynb
@@ -14,10 +14,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9d8c9f48",
+   "metadata": {},
+   "source": [
+    "[![GitHub](https://img.shields.io/badge/GitHub-View%20Source-blue?logo=github)](https://github.com/tattle-made/feluda/blob/main/docs/examples/find_text_in_newspaper.ipynb)  [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tattle-made/feluda/blob/main/docs/examples/find_text_in_newspaper.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1b60aae8",
    "metadata": {},
    "source": [
-    "### Install Required Packages\n",
     "Install dependencies conditionally based on whether the notebook is running in Colab or locally."
    ]
   },
@@ -63,8 +70,6 @@
    "id": "07d21783-b48c-4d4f-8a46-840b4ac0aaa6",
    "metadata": {},
    "source": [
-    "### Initializing Feluda class with config file\n",
-    "\n",
     "We'll use one operator for this example, for detecting text from newspaper clippings. Let's initialize the operator."
    ]
   },
@@ -223,8 +228,7 @@
    "outputs": [],
    "source": [
     "def display_results(results: list[dict]) -> None:\n",
-    "    \"\"\"\n",
-    "    Display the results of text detection in a formatted manner.\n",
+    "    \"\"\"Display the results of text detection in a formatted manner.\n",
     "    \"\"\"\n",
     "    if not results:\n",
     "        print(\"No images were successfully processed.\")\n",
