--- a/docs/examples/plot_tsne_videos.ipynb
+++ b/docs/examples/plot_tsne_videos.ipynb
@@ -5,7 +5,7 @@
    "id": "0fb63c15-f349-47ae-8d27-e1429884f4c8",
    "metadata": {},
    "source": [
-    "## Visualizing Video Embeddings with Feluda and t-SNE \n",
+    "# Visualizing Video Embeddings with Feluda and t-SNE \n",
     "This notebook demonstrates how to use the [`feluda`](https://github.com/tattle-made/feluda) to extract video embeddings and visualize them using t-SNE, with thumbnails overlaid for each video. It includes:\n",
     "- Setting up Feluda and its operators.\n",
     "- Using video data from a subset of the [UCF101 video dataset](https://huggingface.co/datasets/sayakpaul/ucf101-subset) dataset. We are using this for demo, but can be replaced with any video dataset.\n",
@@ -16,10 +16,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bf0eabb5",
+   "metadata": {},
+   "source": [
+    "[![GitHub](https://img.shields.io/badge/GitHub-View%20Source-blue?logo=github)](https://github.com/tattle-made/feluda/blob/main/docs/examples/plot_tsne_videos.ipynb)  [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/tattle-made/feluda/blob/main/docs/examples/plot_tsne_videos.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "63936c9b-ca4e-4aab-a3f8-93b4ae193f2c",
    "metadata": {},
    "source": [
-    "### Install Required Packages\n",
     "Install dependencies conditionally based on whether the notebook is running in Colab or locally."
    ]
   },
@@ -86,8 +93,6 @@
    "id": "bf74a578-a69f-43ba-8740-3219b747e380",
    "metadata": {},
    "source": [
-    "### Initializing the feluda operators\n",
-    "\n",
     "We'll use two operators for this example. One for extracting embeddings and other for dimension reduction."
    ]
   },
@@ -117,7 +122,7 @@
    "id": "320d3505-5d83-422c-a714-84fa0fa6c940",
    "metadata": {},
    "source": [
-    "### Data Preparation"
+    "Data Preparation"
    ]
   },
   {
@@ -191,6 +196,7 @@
     "\n",
     "    Returns:\n",
     "        Path to the saved thumbnail image\n",
+    "\n",
     "    \"\"\"\n",
     "    thumbnail_path = thumbnail_dir / f\"{Path(video_path).stem}_thumbnail.jpg\"\n",
     "\n",
@@ -232,6 +238,7 @@
     "\n",
     "    Returns:\n",
     "        List of video file paths\n",
+    "\n",
     "    \"\"\"\n",
     "    video_paths = [str(path) for path in Path(base_dir).rglob(\"*.avi\")]\n",
     "    return video_paths\n",
@@ -247,7 +254,7 @@
    "id": "0ed93fcc-a66c-43ea-90fc-00fcd00853f8",
    "metadata": {},
    "source": [
-    "### Video Processing and Embedding Extraction"
+    "Video Processing and Embedding Extraction"
    ]
   },
   {
@@ -266,6 +273,7 @@
     "\n",
     "    Returns:\n",
     "        List of dictionaries containing video path, embedding, and thumbnail path\n",
+    "\n",
     "    \"\"\"\n",
     "    operator_parameters = []\n",
     "\n",
@@ -334,7 +342,7 @@
    "id": "1fb982e9-baa5-4537-8724-6cebfd721a90",
    "metadata": {},
    "source": [
-    "### Dimensionality Reduction and Visualization"
+    "Dimensionality Reduction and Visualization"
    ]
   },
   {
@@ -419,7 +427,7 @@
    "id": "6fb113a8-a0cd-45e4-bfba-780e2d519ffc",
    "metadata": {},
    "source": [
-    "### Cleanup"
+    "Cleanup"
    ]
   },
   {
